INTRA-7 Add VP Dark Green

--- a/src/pds/styles/pds-js-variables.scss
+++ b/src/pds/styles/pds-js-variables.scss
@@ -20,6 +20,7 @@
   colorAlertRedXlt: $color-alert-red-xlt;
   colorAlertOrange: $color-alert-orange;
   colorVpGreen: $color-vp-green;
+  colorVpDarkGreen: $color-vp-dark-green;
   colorVpGreen50: $color-vp-green-50;
   colorVpGreen25: $color-vp-green-25;
   colorPtBlue: $color-pt-blue;
