--- a/src/pds/styles/pds-variables.scss
+++ b/src/pds/styles/pds-variables.scss
@@ -19,6 +19,7 @@ $color-alert-red-lt: #F4E2E8;
 $color-alert-red-xlt: #FFF4F7;
 $color-alert-orange: #FF9900;
 $color-vp-green: #33CC33;
+$color-vp-dark-green: #218521;
 $color-vp-green-50: #8DDC83;
 $color-vp-green-25: #C1EEBC;
 $color-pt-blue: #3399FF;
